name:              persistent-mysql-extra
version:           0.0.3
synopsis:          MySQL-specific queries for use with persistent
description:       This package provides additional tunable MySQL queries for
                   persistent. Although esqueleto provides a good interface
                   for writing several more advanced queries, some queries are
                   simply too db-specific to capture in generic library.
                   If you are doing a expensive insert/update queries or
                   similar you might want to look at this package. This is an
                   evolving effort (contributions welcome!).
homepage:          https://github.com/circuithub/persistent-mysql-extra
bug-reports:       https://github.com/circuithub/persistent-mysql-extra/issues
license:           MIT
license-file:      LICENSE
author:            Rehno Lindeque <code@rehno.lindeque.name>
maintainer:        Rehno Lindeque <code@rehno.lindeque.name>
copyright:         2014 CircuitHub, Inc.
cabal-version:     >= 1.10
build-type:        Simple

flag dev
    description:   Turn on development settings
    default:       False

library
    exposed-modules: Database.Persist.MySQL.Extra

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -j
    else
        ghc-options:   -Wall -O2

    default-language: Haskell2010

    build-depends: base                          >= 4.7           && < 5
                 , lifted-base                   >= 0.2.2.2
                 , bytestring                    >= 0.10.4
                 , text                          >= 1.1.1.3
                 , persistent                    >= 1.3.1.1
                 , transformers                  >= 0.4.1.0
                 , monad-logger                  >= 0.3.6.1
                 , monad-control                 >= 0.3.3.0
                 , conduit                       >= 1.1.6
                 , mtl                           >= 2.2.1
                 , safe                          >= 0.3.4
                 , resourcet                     >= 1.1.2.2
                 , split                         >= 0.2.2
                 , containers                    >= 0.5.5.1

